# MERITS-open-source-tools

./: README.md  pyproject.toml
doc/: development.md
doc/images/: MERITS Class Diagram.vsdx
src/merits/: __init__.py  common.py  csvs_to_edifact_base.py  edifact_to_csvs_base.py  exceptions.py
src/merits/cmd/: README.md  __init__.py  arg_definition.py  main.py  worker.py
src/merits/csvs_zip/: __init__.py  collector.py  collector_in_memory.py  collector_mapping.py  config.py  csv_handler.py  csv_hierarchy.py  csv_reader.py  rows.py
src/merits/edifact/: __init__.py  collector.py  collector_in_memory.py  data_handler.py  definition_model.py  edifact_reader.py  edifact_writer.py  object_model.py  segment_format.py  segment_reader.py  segment_writer.py  state_machine.py
tests/: __init__.py
tests/EDIFACT_examples/: SKDUPD_all_fields.r  SKDUPD_all_fields_META.csv  SKDUPD_all_fields_ODI.csv  SKDUPD_all_fields_POR.csv  SKDUPD_all_fields_RELATION.csv  SKDUPD_all_fields_TRAIN.csv  SKDUPD_example.r  TSDUPD_V3.r  TSDUPD_V3_FOOTPATH.csv  TSDUPD_V3_STOP.csv  TSDUPD_all_fields.r  TSDUPD_all_fields_FOOTPATH.csv  TSDUPD_all_fields_MCT.csv  TSDUPD_all_fields_STOP.csv  TSDUPD_all_fields_SYNONYM.csv  TSDUPD_escapes.r  TSDUPD_escapes_FOOTPATH.csv  TSDUPD_escapes_MCT.csv  TSDUPD_escapes_META.csv  TSDUPD_escapes_STOP.csv  TSDUPD_escapes_SYNONYM.csv
tests/merits/: test_csvs_to_edifact.py  test_data_helper.py  test_edifact_reader-001-print-actual.txt  test_edifact_reader-002-print.txt  test_edifact_reader.py  test_edifact_to_csvs.py  test_segment_writer.py
(+14 files in other folders)
